--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,8 @@ dependencies:
   introduction_screen: ^3.1.8
   dio: ^5.2.0+1
   intl: ^0.18.1
+  get_it: ^7.6.0 
+  shared_preferences: ^2.1.2
 
 dev_dependencies:
   flutter_test:
