--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,9 +39,11 @@ dependencies:
   dio: ^5.2.0+1
   intl: ^0.18.1
   get_it: ^7.6.0 
-  shared_preferences: ^2.1.2
+  # shared_preferences: ^2.1.2
   hive: ^2.2.3
   hive_flutter: ^1.1.0
+  flutter_secure_storage: ^8.0.0
+  go_router: ^8.0.5
 
 dev_dependencies:
   flutter_test:
