--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,10 @@ dependencies:
   hive_flutter: ^1.1.0
   flutter_secure_storage: ^8.0.0
   go_router: ^8.0.5
+  flutter_verification_code: ^1.1.6
+  flutter_svg: ^2.0.7
+  animated_svg: ^2.0.0
+  get: ^4.6.5
   # image_picker: ^0.8.9
   # path_provider: ^2.0.15
 
